--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -39,6 +39,12 @@ veggy <- cabbages
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+boxplot(VitC~Cult,data=veggy)
+```
+  
+The Boxplot shows VitC over cult. The data shows that c52 is higher then c39, with the median for c52 being about 64 and c39 showing a median of 51.
+
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
