--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -47,12 +47,17 @@ The Boxplot shows VitC over cult. The data shows that c52 is higher then c39, wi
 ```{r}
 favstats(VitC~Cult,data=veggy)
 ```
-
+  
+It shows c39 minimum, median, max and its mean. It also shows all that next to c52. The visual also shows all of this well in a bloxplot.  
+  
 ## Inferential Results
+
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
-
+```{r}
+t.test(VitC~Cult,data=veggy)
+```
 
 # Discussion and Conclusion
 
